# Autonomous-Mobile-Robot

./: README.md
src/amr_control/: CMakeLists.txt  package.xml
src/amr_control/src/: Sensor_test.cpp  velocity_controller.cpp
src/amr_planner/: CMakeLists.txt  package.xml
src/amr_planner/map/: room.pgm  room.yaml
src/amr_planner/src/: map_publisher.cpp
src/amr_simulation/: CMakeLists.txt  package.xml
src/amr_simulation/config/: display_model.rviz
src/amr_simulation/launch/: gazebo_sim.launch.py  rviz_sim.launch.py  star_all_sim.launch.py
src/amr_simulation/urdf/: robot.ros2_control.xacro
src/amr_simulation/urdf/body/: base.urdf.xacro
src/amr_simulation/urdf/config/: robot.urdf.xacro
src/amr_simulation/urdf/sensor/: camera.urdf.xacro  imu.urdf.xacro  laser.urdf.xacro
src/amr_simulation/urdf/wheel/: caster.urdf.xacro  wheel.urdf.xacro
src/amr_simulation/world/: custom_room.world
src/amr_simulation/world/room/: model.sdf
src/robot_navigation2/: CMakeLists.txt  package.xml
src/robot_navigation2/launch/: navigation2.launch.py
src/robot_navigation2/maps/: room.pgm  room.yaml
